--- a/packages/donor/src/components/basic/Stepper/Stepper.module.scss
+++ b/packages/donor/src/components/basic/Stepper/Stepper.module.scss
@@ -1,10 +1,15 @@
 
-.component{
-  background: unset;
+.component {
+
+  //increase component specificity in order to override the material design css
+  &.component {
+    background: unset !important;
+  }
+
   display: flex;
   align-content: center;
 
-  :global .MuiMobileStepper-dots{
+  :global .MuiMobileStepper-dots {
     flex-grow: 1;
     display: flex;
     justify-content: center;
@@ -12,8 +17,8 @@
   }
 }
 
-.disableButtons{
-  .button{
+.disableButtons {
+  .button {
     display: none;
   }
 }
