donor: add padding to button

--- a/packages/donor/src/components/Wizard/WizardScreen.module.scss
+++ b/packages/donor/src/components/Wizard/WizardScreen.module.scss
@@ -19,7 +19,11 @@
   flex-direction: column;
 }
 
-.nextButton{
-  height: 4em;
+.button{
+  height: 100%;
   width: 100%;
+}
+.buttonContainer{
+  height: 3em;
+  padding: 0 var(--layout-distance-normal,1em) var(--layout-distance-normal,1em);
 }
